# Vixen

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  Doxyfile  README.md  Vixen.cbp  Vixen.cscope_file_list  Vixen.depend  Vixen.files  Vixen.layout  annotated.html  anti__slider_8cpp.html  anti__slider_8cpp__incl.dot  anti__slider_8cpp_source.html  anti__slider_8hpp.html  anti__slider_8hpp__dep__incl.dot  anti__slider_8hpp__incl.dot  anti__slider_8hpp_source.html  anti__slider_8inl.html  anti__slider_8inl__dep__incl.dot  anti__slider_8inl_a6f14655a99ca18901e6452bea4aa313f_cgraph.dot  anti__slider_8inl_afcc2777a6a14bdaa2064a8d1377d3ccc_cgraph.dot  anti__slider_8inl_source.html  board_8cpp.html  board_8cpp__incl.dot  board_8cpp_source.html  board_8hpp.html  board_8hpp__dep__incl.dot  board_8hpp__incl.dot  board_8hpp_source.html  build.bat  build.sh  class_fixed_list-members.html  class_fixed_list.html  class_fixed_list_a80f48fc26eaa576d9d891384e51b6623_icgraph.dot  class_fixed_list_a95462f7f6e0817236fdb203329d9d62f_icgraph.dot  class_fixed_list_af98c4b998d2188f1238478c95df7fff4_icgraph.dot  class_vixen_1_1_board-members.html  (+326 more)
.github/workflows/: ci.yml  cmake-multi-platform.yml  doxygen_deploy.yml  sonar_scan.yml
Extensions/lib/: libboost_thread.so.1.69.0
benchmark/: CMakeLists.txt  benchmark.cpp
html/: annotated.html  anti__slider_8cpp.html  anti__slider_8cpp__incl.map  anti__slider_8cpp__incl.md5  anti__slider_8cpp_source.html  anti__slider_8h.html  anti__slider_8h__dep__incl.map  anti__slider_8h__dep__incl.md5  anti__slider_8h__incl.map  anti__slider_8h__incl.md5  anti__slider_8h_source.html  anti__slider_8hpp.html  anti__slider_8hpp__dep__incl.map  anti__slider_8hpp__dep__incl.md5  anti__slider_8hpp__incl.map  anti__slider_8hpp__incl.md5  anti__slider_8hpp_source.html  anti__slider_8inl.html  anti__slider_8inl__dep__incl.map  anti__slider_8inl__dep__incl.md5  anti__slider_8inl__incl.map  anti__slider_8inl__incl.md5  anti__slider_8inl_a6f14655a99ca18901e6452bea4aa313f_cgraph.map  anti__slider_8inl_a6f14655a99ca18901e6452bea4aa313f_cgraph.md5  anti__slider_8inl_afcc2777a6a14bdaa2064a8d1377d3ccc_cgraph.map  anti__slider_8inl_afcc2777a6a14bdaa2064a8d1377d3ccc_cgraph.md5  anti__slider_8inl_source.html  board_8cpp.html  board_8cpp__incl.map  board_8cpp__incl.md5  board_8cpp_source.html  board_8h.html  board_8h__dep__incl.map  board_8h__dep__incl.md5  board_8h__incl.map  board_8h__incl.md5  board_8h_source.html  board_8hpp.html  board_8hpp__dep__incl.map  board_8hpp__dep__incl.md5  (+603 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  (+71 more)
include/: Board.h  Hash.h  MoveGenerator.h  defs.h
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  (+79 more)
src/: Board.cpp  CMakeLists.txt  Hash.cpp  MoveGenerator.cpp  main.cpp  unittest.cpp
src/container/: CMakeLists.txt
src/container/inl/: fixed_list.hpp
src/container/src/: sorted_map.hpp  sorted_map.inl  sorted_set.hpp  sorted_set.inl
src/container/test/: fixed_list_test.cpp  test_sorted_map.cpp  test_sorted_set.cpp
src/vixen/: CMakeLists.txt  anti_slider.cpp  anti_slider.h  anti_slider.hpp  anti_slider.inl  board.cpp  board.h  board.hpp  defs.h  defs.hpp  engine.cpp  engine.h  engine.hpp  fixed_list.h  fixed_list.hpp  hash.cpp  hash.h  hash.hpp  move.h  move.hpp  move_generator.cpp  move_generator.h  move_generator.hpp  principal_variation.cpp  principal_variation.h  principal_variation.hpp  random.h  random.hpp  slider.cpp  slider.h  slider.hpp  slider.inl  small_map.h  timer.h  timer.hpp  uci.cpp  uci.h  uci.hpp  userinterface.cpp  userinterface.h  (+1 more)
unittest/: CMakeLists.txt  fixture.h  perft_alternative_position.cpp  perft_bugfix.cpp  perft_kiwipete_position.cpp  perft_mirror_position.cpp  perft_rook_pawn_position.cpp  perft_start_position.cpp  perft_talk_chess_position.cpp  perfttest.cpp  unittest.cpp  vixen_principal_variation_test.cpp
