cmake_minimum_required(VERSION 3.13)

project(Vixen)
set(CMAKE_CXX_COMPILER_ARCHITECTURE_ID "x64")
set(CMAKE_INSTALL_PREFIX ${PROJECT_SOURCE_DIR})
set(Vixen_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/src/vixen)

# Set RPATH
if (CMAKE_HOST_UNIX)
    set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/Extensions/lib:${CMAKE_INSTALL_PREFIX}/bin")
    set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)
    MESSAGE(STATUS "CMAKE_INSTALL_RPATH: ${CMAKE_INSTALL_RPATH}")
endif ()

add_subdirectory(src)
add_subdirectory(unittest)
