cmake_minimum_required(VERSION 3.13)

set(SOURCE_FILES unittest.cpp fixture.h)

set(Boost_INCLUDE_DIR ${PROJECT_SOURCE_DIR}/Extensions)
set(BOOST_LIBRARYDIR ${PROJECT_SOURCE_DIR}/Extensions/lib)
set(Boost_USE_MULTITHREADED ON)
set(Boost_USE_STATIC_RUNTIME OFF)
find_package(Boost)

message(STATUS "Boost Include: ${Boost_INCLUDE_DIR}")
message(STATUS "Boost Libraries: ${Boost_LIBRARY_DIRS}")
message(STATUS "Boost Libraries: ${Boost_LIBRARIES}")

function(create_test target_name source_file)
    add_executable(${target_name} ${source_file})
    target_include_directories(${target_name} PRIVATE ${PROJECT_SOURCE_DIR}/src/vixen ${Boost_INCLUDE_DIRS})
    target_link_libraries(${target_name} PRIVATE Engine ${Boost_LIBRARIES})
    target_compile_features(${target_name} PRIVATE cxx_std_20)
    add_test(NAME ${target_name} COMMAND ${target_name} WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/bin)
    install(TARGETS ${target_name} DESTINATION bin)
endfunction()

create_test(unittest ${SOURCE_FILES})
create_test(principal vixen_principal_variation_test.cpp)
create_test(perft_start_position perft_start_position.cpp)
create_test(perft_kiwipete_position perft_kiwipete_position.cpp)
create_test(perft_rook_pawn_position perft_rook_pawn_position.cpp)
create_test(perft_talk_chess_position perft_talk_chess_position.cpp)
create_test(perft_mirror_position perft_mirror_position.cpp)
create_test(perft_alternative_position perft_alternative_position.cpp)
